BUG: Fixed layout problem in basked with too long lines
Close #894.

--- a/topobank/static/css/project.css
+++ b/topobank/static/css/project.css
@@ -504,3 +504,8 @@ section[title="Terms and Conditions"] div.toc-container, #tc-terms-html {
   position: absolute;
   top: 0.35rem;
 }
+
+.float-right-flex {
+display:flex;
+justify-content: flex-end;
+}
